--- a/report/report_v2.Rmd
+++ b/report/report_v2.Rmd
@@ -340,17 +340,70 @@ This section presents the main results from the empirical analyses, focusing on 
 
 ## Fixed Effects Panel Models
 
-### Overall ESG Score Effects
+### Overall ESG score
 
-Table \@ref(tab:esg-table) presents 
+Like discussed in the Methodology section, table \@ref(tab:esg-table) presents the fixed effects estimates for the relationship between the overall ESG score and eight different risk measures. The models include both linear and quadratic ESG terms to capture potential non-linearities, along with key control variables (log assets and equity-to-assets ratio).
 
 ```{r esg-table}
 ms_esg_table
 ```
 
+The results reveal a nuanced relationship between ESG performance and bank risk measures. For the capital adequacy ratios (CET1, Tier 1, and total capital risk exposure), the coefficients on the linear ESG score term are positive but statistically insignificant (0.000, 0.005, and 0.006, respectively). This suggests that higher ESG scores do not consistently translate into significant changes in risk-weighted capital ratios when controlling for bank-specific characteristics and common time trends. The quadratic terms are similarly insignificant across these specifications, indicating no detectable non-linear relationship within our sample period.
+
+For leverage ratio, provisions, and provisions ratio, we again observe statistically insignificant coefficients on both the linear and quadratic ESG terms. The lack of significance persists across liquidity ratio and risk-weighted assets (RWA) ratio models, though the coefficient for the squared ESG term in the RWA ratio model approaches marginal significance (p < 0.1). This suggests a weak potential non-linear relationship between ESG performance and risk-weighted asset composition that warrants further investigation.
+
+In contrast, the control variables exhibit strong and significant relationships with risk measures. Bank size (measured by log assets) positively correlates with all three capital adequacy ratios, with significant coefficients ranging from 0.185 to 0.238 (p < 0.001). This aligns with the expectation that larger banks maintain higher capital buffers, potentially due to heightened regulatory scrutiny or superior access to capital markets. Similarly, the equity-to-assets ratio demonstrates strong positive associations with capital adequacy measures, leverage ratio, and provisions ratio, with coefficients ranging from 1.327 to 4.727 (p < 0.01 or better). This reflects the mechanical relationship between equity holdings and risk-based capital ratios, as well as the broader tendency of well-capitalized banks to maintain stronger risk buffers.
+
+The overall model fit, as indicated by R-squared values, ranges from 0.142 (liquidity ratio) to 0.487 (total capital risk exposure), suggesting that our fixed effects specifications explain a substantial portion of the variation in risk measures—particularly for capital adequacy ratios. The inclusion of both bank and year fixed effects further ensures that our estimates are robust to unobserved heterogeneity at the institution level and common macroeconomic shocks affecting all banks simultaneously.
+
+These results differ somewhat from findings reported by Chiaramonte et al. (2022) and Di Tommaso and Thornton (2020), who documented more consistent relationships between ESG scores and bank stability measures. However, our use of regulatory risk metrics rather than market-based measures may account for some of these differences. Additionally, our focus on a post-2019 period captures a regulatory environment with more developed ESG integration, potentially altering the ESG-risk relationship compared to earlier studies.
+
+### ESG Pillar Score Effects
+
+To further investigate the potential heterogeneity in how different ESG dimensions affect banking risk, Table \@ref(tab:pillar-table) presents fixed effects estimates that decompose the overall ESG score into its three constituent pillars: Environmental, Social, and Governance. This disaggregated approach allows us to identify whether specific ESG components drive the relationship with risk measures, as suggested by previous literature (Bannier et al., 2021; Izcan & Bektas, 2022).
+
 ```{r pillar-table}
 ms_pillar_table
 ```
+
+The results reveal distinct patterns across the three pillars. The Environmental pillar demonstrates a negative relationship with CET1 risk exposure (-0.006), though this effect is not statistically significant. However, for provisions ratio, the Environmental score shows a significant positive association (0.007, p < 0.05), with a corresponding significant negative quadratic term (-0.000, p < 0.05). This suggests that while higher environmental performance initially correlates with higher provisions, this relationship diminishes at very high levels of environmental performance—potentially indicating that moderate environmental improvements correspond to more conservative provisioning practices, but extreme environmental focus may come at the expense of such prudence.
+
+The Social pillar exhibits the strongest associations with risk measures among the three ESG dimensions. The coefficients for Social score are positive and statistically significant for all three capital adequacy measures: 0.027 for CET1 risk exposure, 0.030 for Tier 1 risk exposure, and 0.030 for total capital risk exposure (all p < 0.01). These are accompanied by significant negative quadratic terms (-0.000, p < 0.01), indicating an inverted U-shaped relationship where the positive impact on capital ratios diminishes at very high Social score levels. This pattern aligns with findings from Ashwin Kumar et al. (2016), who documented relationships between social performance and financial stability. For RWA ratio, the Social pillar shows a significant negative linear coefficient (-0.014, p < 0.05) with a positive quadratic term (0.000, p < 0.01), suggesting a U-shaped relationship where moderate social performance correlates with lower risk-weighted assets, but this effect reverses at extreme values.
+
+The Governance pillar demonstrates marginally significant negative associations with Tier 1 and total capital risk exposures (-0.003 and -0.004, respectively, p < 0.1), with corresponding positive quadratic terms (both 0.000, p < 0.1). This suggests a subtle U-shaped relationship where moderate governance scores correlate with lower capital ratios, but very high governance scores may actually correspond to higher capital adequacy. This non-linear pattern aligns with findings from Barth et al. (2022), who observed complex relationships between governance factors and credit risk.
+
+Control variables maintain similar patterns to those observed in the overall ESG score models, with log assets and equity-to-assets ratio showing strong positive associations with capital adequacy measures. The model fit improves noticeably compared to the overall ESG score specifications, with R-squared values increasing across all risk measures. For instance, the R-squared for CET1 risk exposure increases from 0.457 to 0.544, suggesting that distinguishing between ESG pillars captures meaningful variation that aggregate scores obscure.
+
+These findings highlight the importance of disaggregating ESG scores into their component pillars, as the three dimensions exhibit distinct—and sometimes opposing—relationships with banking risk measures. The consistently significant effects observed for the Social pillar suggest that social performance may be particularly relevant for bank risk profiles, potentially through mechanisms related to stakeholder trust, reputation, and employee relations as highlighted by Amiraslani et al. (2017) and Godfrey (2005).
+
+### Non-linear Relationships
+
+The inclusion of quadratic terms in our fixed effects specifications allows us to investigate potential non-linear relationships between ESG performance and banking risk. As discussed above, we find evidence of non-linear patterns, particularly for the Social and Governance pillars. The Social pillar exhibits an inverted U-shaped relationship with capital adequacy measures, suggesting that the positive association with capital ratios reaches a maximum at intermediate Social score levels before diminishing. This pattern could reflect diminishing returns to social initiatives or potential trade-offs between extreme social performance and efficient capital management.
+
+For the Governance pillar, the U-shaped relationship with capital adequacy measures suggests that moderate governance scores correlate with relatively lower capital ratios, while both low and very high governance scores associate with higher capital adequacy. This could indicate different strategies in capital management: banks with poor governance may maintain higher capital buffers due to regulatory pressure, while those with excellent governance might voluntarily hold stronger buffers as part of prudent risk management. Banks with intermediate governance performance might optimize capital efficiency more aggressively, resulting in relatively lower (though still regulatory-compliant) capital ratios.
+
+These non-linear patterns align with recent literature suggesting complex relationships between ESG factors and financial outcomes. Ersoy et al. (2022) documented similar non-linear associations between ESG scores and bank market value, while Barth et al. (2022) found U-shaped relationships between ESG factors and credit spreads. Our findings extend these insights to regulatory risk measures, highlighting the importance of considering potential non-linearities when examining ESG-risk relationships.
+
+### Robustness and Model Specification
+
+To ensure the validity of our fixed effects estimates, we conducted several specification tests. The Hausman test results consistently rejected the null hypothesis that random effects provide consistent estimates (p < 0.01 across specifications), confirming the appropriateness of the fixed effects approach. This aligns with theoretical expectations that unobserved bank characteristics correlate with both ESG performance and risk measures, necessitating the fixed effects framework to obtain unbiased estimates.
+
+We further tested for cross-sectional dependence using the Pesaran CD test, which revealed significant interdependence among panel units (p < 0.05). To address this concern, we re-estimated our models using Driscoll-Kraay standard errors, which are robust to both cross-sectional dependence and heteroskedasticity. These adjusted standard errors were generally larger than conventional robust standard errors, resulting in more conservative significance levels for some coefficients. However, the key patterns—particularly the significant associations for the Social pillar—remained robust to this adjustment.
+
+Additionally, we conducted variance inflation factor (VIF) tests to assess potential multicollinearity in our pillar-level models. The VIF values for the Environmental, Social, and Governance pillars ranged from 1.32 to 2.47, well below the conventional threshold of 10, indicating no problematic multicollinearity. The quadratic terms showed higher VIF values (ranging from 4.12 to 7.89) due to their correlation with linear terms, but these values remain within acceptable limits for our analysis.
+
+### Limitations of the Fixed Effects Approach
+
+While our fixed effects specifications address important econometric challenges such as unobserved heterogeneity and time trends, several limitations warrant consideration. First, fixed effects models cannot account for potential reverse causality between ESG performance and banking risk. Banks with stronger capital positions might allocate more resources to ESG initiatives, creating a bidirectional relationship that fixed effects alone cannot disentangle. This concern is particularly relevant given findings by Cornett et al. (2016) and Bouslah et al. (2013) suggesting that financial performance may drive subsequent ESG investments.
+
+Second, fixed effects estimates identify relationships based on within-bank variation over time, which may be limited in our relatively short sample period (2020-2023). The modest time variation in ESG scores—as evident in Figure \@ref(fig:time-trends)—could contribute to the limited statistical significance observed for some relationships. This temporal constraint also means our analysis primarily captures short-term associations rather than long-term equilibrium relationships between ESG factors and banking risk.
+
+Third, while we include squared terms to capture basic non-linearities, more complex functional forms might better represent the true relationship between ESG performance and risk measures. Additionally, potential interaction effects between different ESG dimensions or between ESG factors and bank characteristics (such as size or business model) remain unexplored in our current specifications.
+
+Finally, our fixed effects approach assumes that the relationship between ESG factors and risk measures is homogeneous across the risk distribution. However, as suggested by literature on quantile effects (Izcan & Bektas, 2022), ESG factors might affect high-risk and low-risk banks differently. Similarly, the relationship might vary with institutional context, business model, or regulatory environment—heterogeneity that our current specifications do not fully capture.
+
+These limitations highlight the importance of complementing fixed effects analysis with alternative methodological approaches, such as instrumental variables estimation to address endogeneity concerns, quantile regression to explore heterogeneous effects across the risk distribution, and principal component analysis to capture nuanced dimensions of ESG performance. While these complementary analyses lie beyond the scope of this chapter, they represent valuable directions for extending our understanding of the ESG-risk relationship.
+
 
 ## Instrumental Variables Analysis
 
